hero with choosen video

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         </div>
         <div class="main-video__container">
-            <video src="videos/main-video1.mp4" muted loop autoplay class="main-video"></video>
+            <video src="videos/main-video2.mp4" muted loop autoplay class="main-video"></video>
             <!-- <video src="https://s3.amazonaws.com/akamai.netstorage/HD_downloads/Orion_SM.mp4" muted loop autoplay class="main-video"></video> -->
         </div>
         <div class="main-heading">
             <h1>
-                <span>Istirdaya</span> </br> "Veshenka" Göbələyi
+                <span>Göbələklər</span> </br> Səbətdən Düz Tavanıza!
             </h1>
         </div>
 
