fixed name of the mushroom

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css"> 
     <script src="./scripts/script.js"></script>
     
-    <title>Istirdiya</title>
+    <title>Istridiya</title>
     
 </head>
 <body>
